sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but '}' found.
		if (getValeur(i)>=getValeur(i+1)) { echange(getValeur(i),getValeur(i+1) }
                                                                                        ^